--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -2,25 +2,29 @@
 <li class="breadcrumb-item active">Events</li>
 {% endblock %} {% block content %}
 <table class="table">
+    <div class="mb-4">
+        <a href="#" class="btn btn-primary">New event</a>
+    </div>
     <thead class="thead-inverse">
         <tr>
-            <th>Events</th>
+            <th>Event</th>
+            <th>Creater</th>
             <th>Replies</th>
-            <th>Last Reply</th>
+            <th>Views</th>
+            <th>Last Update</th>
         </tr>
     </thead>
     <tbody>
         {% for event in events %}
         <tr>
             <td>
-                <a href="#">{{ event.name }}</a>
+                <a href="{% url 'event' event.pk %}">{{ event.name }}</a>
                 <small class="text-muted d-block">{{ event.description }}</small>
             </td>
-            <td class="align-middle">
-            </td>
-            <td class="align-middle">
-
-            </td>
+            <td>-</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
         </tr>
         {% endfor %}
     </tbody>
