--- a/project/templates/includes/form.html
+++ b/project/templates/includes/form.html
@@ -6,7 +6,7 @@
     </div>
     {% endfor %} {% else %} {% render_field field class="form-control is-valid" %} {% endif %} {% else %} {% render_field field class="form-control" %} {% endif %} {% if field.help_text %}
     <small class="form-text text-muted">
-        {{ field.help_text }}
+        {{ field.help_text|safe }}
       </small> {% endif %}
 </div>
 {% endfor %}
