--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -20,8 +20,15 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="mainMenu">
-
-                {% if user.is_authenticated %}>
+                <form class="form-inline ml-auto">
+                    <div class="search-container">
+                        <form action="/action_page.php">
+                            <input type="text" placeholder="Search..." name="search">
+                            <button type="button" class="btn btn-outline-success">Search</button>
+                        </form>
+                </form>
+                </div>
+                {% if user.is_authenticated %}
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -29,7 +36,7 @@
                   </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                             <a class="dropdown-item" href="#">My account</a>
-                            <a class="dropdown-item" href="#">Change password</a>
+                            <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                         </div>
@@ -37,12 +44,6 @@
                 </ul>
                 {% else %}
                 <form class="form-inline ml-auto">
-                    <div class="search-container">
-                        <form action="/action_page.php">
-                            <input type="text" placeholder="Search..." name="search">
-                            <button type="button" class="btn btn-outline-success">Search</button>
-                        </form>
-                    </div>
                     <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
                     <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
                 </form>
