--- a/project/templates/event.html
+++ b/project/templates/event.html
@@ -21,8 +21,8 @@
                 <div class="row mb-1">
                 </div>
                 {% if event.created_by == user %}
-                <a href="#" class="btn btn-primary" role="button">Edit</a>{% endif %}
-                <a href="{% url 'new_reply' event.pk %}" class="btn btn-primary">New reply</a>
+                <a href="#" class="btn btn-primary" role="button">Edit</a>{% endif %} {% if user.is_authenticated %}
+                <a href="{% url 'new_reply' event.pk %}" class="btn btn-primary">New reply</a> {% endif %}
             </div>
         </div>
     </div>
