--- a/project/templates/password_change.html
+++ b/project/templates/password_change.html
@@ -1,12 +1,16 @@
-{% extends 'base.html' %} {% block title %}Change password{% endblock %} {% block breadcrumb %}
-<li class="breadcrumb-item active">Change password</li>
-{% endblock %} {% block content %}
-<div class="row">
-    <div class="col-lg-6 col-md-8 col-sm-10">
-        <form method="post" novalidate>
-            {% csrf_token %} {% include 'includes/form.html' %}
-            <button type="submit" class="btn btn-success">Change password</button>
-        </form>
+{% extends 'base_accounts.html' %} {% block title %}Change password{% endblock %} {% block content %}
+<div class="row justify-content-center">
+    <div class="col-lg-8 col-md-10 col-sm-12">
+        <div class="card">
+            <div class="card-body">
+                <h3 class="card-title">Change password</h3>
+                <form method="post" novalidate>
+                    {% csrf_token %} {% include 'includes/form.html' %}
+                    <button type="submit" class="btn btn-primary btn-block">Change password</button>
+                </form>
+            </div>
+        </div>
     </div>
+</div>
 </div>
 {% endblock %}
