--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -35,7 +35,7 @@
                     {{ user.username }}
                   </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                            <a class="dropdown-item" href="{% url 'my_account' user.id %}">My account</a>
+                            <a class="dropdown-item" href="{% url 'account' user.id %}">My account</a>
                             <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
