--- a/project/templates/new_event.html
+++ b/project/templates/new_event.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} {% load static %} {% block title %}Plan an event{% endblock %} {% block breadcrumb %}
-<li class="breadcrumb-item"><a href="{% url 'home' %}">Events</a></li>
+<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+<li class="breadcrumb-item"><a href="{% url 'all_events' %}">Events</a></li>
 <li class="breadcrumb-item active">Plan an event</li>
 {% endblock %} {% block content %}
 
