--- a/project/static/css/home.css
+++ b/project/static/css/home.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Noto Sans JP', sans-serif;
-    background-color: #fef8f8;
+    background-color: #ffffff;
 }
 
 .cards {
