--- a/project/templates/event.html
+++ b/project/templates/event.html
@@ -7,12 +7,23 @@
 <div class="card mb-4 border-dark">
     <div class="card-header text-dark bg-light py-5 px-3">
         <div class="row mb-4">
-            <div class="col-10 text-right">
-                <small class="text-muted">Created by {{ event.created_by.username }} at {{ event.created_at }}</small>
+            <div class="card mb-2 border-dark">
+                <div class="card-header text-dark bg-light py-2 px-5">
+                    <div class="row mb-2">
+                        Date : {{ event.date }}
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-2 border-dark">
+                <div class="card-header text-dark bg-light py-2 px-5">
+                    <div class="row mb-2">
+                        Payment : {{ event.payment_type }}
+                    </div>
+                </div>
             </div>
         </div>{{ event.description }}
-        <div class="col-10 text-right">
-            <small class="text-muted"> {{ event.payment_type }}</small>
+        <div class="col-15 text-right">
+            <small class="text-muted">Created by {{ event.created_by.username }} at {{ event.created_at }}</small>
         </div>
     </div>
 
@@ -23,7 +34,17 @@
                 </div>
                 {% if event.created_by == user %}
                 <a href="#" class="btn btn-info" role="button">Edit</a>{% endif %} {% if user.is_authenticated %}
-                <a href="{% url 'new_reply' event.pk %}" class="btn btn-primary">New reply</a> {% endif %}
+                <a href="{% url 'new_reply' event.pk %}" class="btn btn-primary">New reply</a>
+                <a href="{% url 'appreciation' event.pk %}" class="btn btn-primary">Rate</a> {% endif %}
+            </div>
+            <div class="col-20">
+                <form method="post" novalidate>
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-primary btn-block">Like</button>
+                </form>
+            </div>
+            <div class="card-body p-2">
+                <small class="text">{{ event.get_likes_count }}</small>
             </div>
         </div>
     </div>
@@ -32,18 +53,18 @@
 <div class="card mb-2">
     <div class="card-body p-3">
         <div class="row mb-4">
-            <div class="col-10 text-right">
-                <small class="text-muted">By {{ reply.created_by.username }} at {{ reply.created_at }}</small>
-            </div>
-        </div>
-        <div class="row mb-4">
             <div class="col-10">
                 {{ reply.message }}
+                <div class="col-15 text-right">
+                    <small class="text-muted">Created by {{ reply.created_by.username }} at {{ reply.created_at }}</small>
+                </div>
             </div>
         </div>
-        <div> {% if reply.created_by == user %}
+        <div class="col-20"> {% if reply.created_by == user %}
             <a href="#" class="btn btn-info" role="button">Edit</a>{% endif %}
         </div>
     </div>
 </div>
-{% endfor %} {% endblock %}
+{% endfor %}
+</div>
+{% endblock %}
