Attend button added

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -24,7 +24,7 @@
                     <div class="search-container">
                         <form action="/action_page.php">
                             <input type="text" placeholder="Search..." name="search">
-                            <button type="button" class="btn btn-outline-success">Search</button>
+                            <button name="search" type="button" class="btn btn-outline-success">Search</button>
                         </form>
                 </form>
                 </div>
