--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -5,7 +5,7 @@
 <ul class="cards">
     <li>
         <a href="{% url 'categories' %}" class="card">
-            <img src="https://i.imgur.com/oYiTqum.jpg" class="card__image" alt="" />
+            <img src='/static/img/categories.jpg' class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header">
                     <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>
@@ -21,7 +21,7 @@
     </li>
     <li>
         <a href="{% url 'all_events' %}" class="card">
-            <img src="https://i.imgur.com/2DhmtJ4.jpg" class="card__image" alt="" />
+            <img src="/static/img/events.jpg" class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header">
                     <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>
