--- a/project/templates/account.html
+++ b/project/templates/account.html
@@ -81,19 +81,19 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                 <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe mr-2 icon-inline"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>Website</h6>
-                                <span class="text-secondary">-</span>
+                                <span class="text-secondary">{{profile.website}}</span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                 <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h6>
-                                <span class="text-secondary">-</span>
+                                <span class="text-secondary">{{profile.twitter}}</span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                 <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>Instagram</h6>
-                                <span class="text-secondary">-</span>
+                                <span class="text-secondary">{{profile.instagram}}</span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                 <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook mr-2 icon-inline text-primary"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>Facebook</h6>
-                                <span class="text-secondary">-</span>
+                                <span class="text-secondary">{{profile.facebook}}</span>
                             </li>
                         </ul>
                     </div>
@@ -141,14 +141,11 @@
                             <div class="card h-100">
                                 <div class="card-body">
                                     <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">events</i>Appreciation Status</h6>
-                                    <small>Event 1 <p class="text-muted font-size-sm">category</p></small>
+                                    {% for past_event in past_events %}
+                                    <small><a href="{% url 'event' past_event.pk %}" class="text">{{past_event.name}}</a> <p class="text-muted font-size-sm">{{past_event.category.name}}</p></small>
                                     <div class="progress mb-3" style="height: 5px">
                                         <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                    <small>Event 2 <p class="text-muted font-size-sm">category</p></small>
-                                    <div class="progress mb-3" style="height: 5px">
-                                        <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
+                                    </div>{% endfor %}
                                 </div>
                             </div>
                         </div>
@@ -156,7 +153,8 @@
                             <div class="card h-100">
                                 <div class="card-body">
                                     <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">events</i>Upcoming Events</h6>
-                                    <small>Event 3 <p class="text-muted font-size-sm">category</p></small>
+                                    {% for upcoming_event in upcoming_events %}
+                                    <small><a href="{% url 'event' upcoming_event.pk %}" class="text">{{upcoming_event.name}}</a> <p class="text-muted font-size-sm">{{upcoming_event.category.name}}</p></small> {% endfor %}
                                 </div>
                             </div>
                         </div>
@@ -166,8 +164,8 @@
                             <div class="card h-100">
                                 <div class="card-body">
                                     <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">events</i>Attended Events</h6>
-                                    <small>Event 4 <p class="text-muted font-size-sm">category</p></small>
-                                    <small>Event 5 <p class="text-muted font-size-sm">category</p></small>
+                                    {% for attended_event in attended_events %}
+                                    <small><a href="{% url 'event' attended_event.event.pk %}" class="text">{{attended_event.event.name}}</a> <p class="text-muted font-size-sm">{{attended_event.event.category.name}}</p></small> {% endfor %}
                                 </div>
                             </div>
                         </div>
@@ -175,8 +173,8 @@
                             <div class="card h-100">
                                 <div class="card-body">
                                     <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">events</i>Liked Events</h6>
-                                    {% for event in liked_events %}
-                                    <small>{{event.name}} <p class="text-muted font-size-sm">{{event.category}}</p></small> {% endfor %}
+                                    {% for liked_event in liked_events %}
+                                    <small><a href="{% url 'event' liked_event.event.pk %}" class="text">{{liked_event.event.name}}</a> <p class="text-muted font-size-sm">{{liked_event.event.category.name}}</p></small> {% endfor %}
                                 </div>
                             </div>
                         </div>
