--- a/project/templates/account.html
+++ b/project/templates/account.html
@@ -130,7 +130,7 @@
                             <hr>
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <a class="btn btn-info " href="#">Edit</a>
+                                    <a class="btn btn-info " href=" {% url 'edit_profile' profile.user.id %}">Edit</a>
                                 </div>
                             </div>
                         </div>
