--- a/project/templates/account.html
+++ b/project/templates/account.html
@@ -67,12 +67,15 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex flex-column align-items-center text-center">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                                {% if profile.gender == 'Male' %}<img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="Admin" class="rounded-circle" width="150"> {% else %} {% if profile.gender == 'Female' %}<img src="https://bootdey.com/img/Content/avatar/avatar3.png"
+                                    alt="Admin" class="rounded-circle" width="150"> {% endif %} {% endif %}
                                 <div class="mt-3">
                                     <h4>{{profile.user.username}}</h4>
-                                    <p class="text-muted font-size-sm">followers</p>
-                                    <button class="btn btn-primary">Follow</button>
-                                    <button class="btn btn-outline-primary">Message</button>
+                                    <p class="text-muted font-size-sm"> <a href="{% url 'followers' profile.user.id %}">{{profile.get_num_of_followers}} followers </a> </p> {% if user.is_authenticated %} {% if not profile.user == user %}
+                                    <form method="post" novalidate>
+                                        {% csrf_token %} <button name="follow" type="submit" class="btn btn-primary">Follow</button>
+                                    </form>
+                                    <button name="message" class="btn btn-outline-primary">Message</button>{% endif %} {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -128,10 +131,10 @@
                                 </div>
                             </div>
                             <hr>
-                            <div class="row">
+                            <div class="row">{% if profile.user == user %}
                                 <div class="col-sm-12">
                                     <a class="btn btn-info " href=" {% url 'edit_profile' profile.user.id %}">Edit</a>
-                                </div>
+                                </div>{% endif %}
                             </div>
                         </div>
                     </div>
