--- a/project/templates/category.html
+++ b/project/templates/category.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block title %} {{ category.name }} - {{ block.super }} {% endblock %} {% block breadcrumb %}
+<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
 <li class="breadcrumb-item"><a href="{% url 'categories' %}">Categories</a></li>
 <li class="breadcrumb-item active">{{ category.name }}</li>
 {% endblock %} {% block content %}
