--- a/project/templates/edit_event.html
+++ b/project/templates/edit_event.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %} {% block title %}Edit event{% endblock %} {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'home' %}">Meet</a></li>
-<li class="breadcrumb-item">
-    <a href="{% url 'all_events' %}"> Events</a>
-</li>
+<li class="breadcrumb-item"><a href="{% url 'all_events' %}"> Events</a></li>
+<li class="breadcrumb-item"><a href="#">{{ event.name }}</a></li>
 <li class="breadcrumb-item active">Edit Event</li>
 {% endblock %} {% block content %}
 <form method="post" class="mb-4" novalidate>
