--- a/project/templates/edit_profile.html
+++ b/project/templates/edit_profile.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} {% block title %}Edit event{% endblock %} {% block breadcrumb %}
-<li class="breadcrumb-item"><a href="{% url 'home' %}">Meet</a></li>
+<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+<li class="breadcrumb-item active" aria-current="page"><a href="{% url 'account' profile.user.id %}">My Account</a></li>
 <li class="breadcrumb-item active">Edit Profile</li>
 {% endblock %} {% block content %}
 <form method="post" class="mb-4" novalidate>
