--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}"> {% block stylesheet %}{% endblock %}
+    <script src="https://kit.fontawesome.com/c6e6d54a26.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
