--- a/project/templates/account.html
+++ b/project/templates/account.html
@@ -6,9 +6,9 @@
     <div class="col-md-4 mb-3">
         <div class="card">
             <div class="card-body">
-                <div class="d-flex flex-column align-items-center text-center">
-                    {% if profile.gender == 'Male' %}<img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="Admin" class="rounded-circle" width="150"> {% else %} {% if profile.gender == 'Female' %}<img src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                        alt="Admin" class="rounded-circle" width="150"> {% endif %} {% endif %}
+                <div class="d-flex flex-column align-items-center text-center"> {% if profile.profile_picture %}
+                    <img src="{{ profile.profile_picture.url }}" alt="Admin" class="rounded-circle" width="150"> {% else %} {% if profile.gender == 'Male' %}<img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="Admin" class="rounded-circle"
+                        width="150"> {% else %} {% if profile.gender == 'Female' %}<img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="Admin" class="rounded-circle" width="150"> {% endif %} {% endif %} {% endif %}
                     <div class="mt-3">
                         <h4>{{profile.user.username}}</h4>
                         <p class="text-muted font-size-sm"> <a href="{% url 'followers' profile.user.id %}">{{profile.get_num_of_followers}} followers </a> </p> {% if user.is_authenticated %} {% if not profile.user == user %}
@@ -73,7 +73,7 @@
                 <hr>
                 <div class="row">{% if profile.user == user %}
                     <div class="col-sm-12">
-                        <a class="btn btn-info " href=" {% url 'edit_profile' profile.user.id %}">Edit</a>
+                        <a class="btn btn-info " href=" {% url 'edit_profile' profile.id %}">Edit</a>
                     </div>{% endif %}
                 </div>
             </div>
