after handling image upload

--- a/project/templates/account.html
+++ b/project/templates/account.html
@@ -7,7 +7,7 @@
         <div class="card">
             <div class="card-body">
                 <div class="d-flex flex-column align-items-center text-center"> {% if profile.profile_picture %}
-                    <img src="{{ profile.profile_picture.url }}" alt="Admin" class="rounded-circle" width="150"> {% else %} {% if profile.gender == 'Male' %}<img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="Admin" class="rounded-circle"
+                    <img src="{{ profile.profile_picture.url }}" alt="Admin" class="rounded-circle" width="150" height="150"> {% else %} {% if profile.gender == 'Male' %}<img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="Admin" class="rounded-circle"
                         width="150"> {% else %} {% if profile.gender == 'Female' %}<img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="Admin" class="rounded-circle" width="150"> {% endif %} {% endif %} {% endif %}
                     <div class="mt-3">
                         <h4>{{profile.user.username}}</h4>
