--- a/project/templates/event.html
+++ b/project/templates/event.html
@@ -5,6 +5,7 @@
 <li class="breadcrumb-item"><a href="{% url 'all_events' %}">Events</a></li>
 <li class="breadcrumb-item active">{{ event.name }}</li>
 {% endblock %} {% block content %}
+
 <!-- Blog Details Section Begin -->
 <section class="blog-details spad">
     <div class="container">
@@ -12,7 +13,7 @@
             <div class="col-lg-8 col-md-8">
                 <div class="blog__details__content">
                     <div class="blog__details__item">
-                        <img src="img/blog/details/blog-details.jpg" alt="">
+                        <img src="{{event.get_image}}" alt="">
                         <div class="blog__details__item__title">
                             <span class="tip">{{event.name}}</span>
                             <h4>{{event.description}}</h4>
@@ -112,43 +113,16 @@
                                 <img src="img/blog/sidebar/fp-1.jpg" alt="">
                             </div>
                             <div class="blog__feature__item__text">
-                                <h6>Amf Cannes Red Carpet Celebrities Kend...</h6>
-                                <span>Seb 17, 2019</span>
-                            </div>
-                        </a>
-                        <a href="#" class="blog__feature__item">
-                            <div class="blog__feature__item__pic">
-                                <img src="img/blog/sidebar/fp-2.jpg" alt="">
-                            </div>
-                            <div class="blog__feature__item__text">
-                                <h6>Amf Cannes Red Carpet Celebrities Kend...</h6>
-                                <span>Seb 17, 2019</span>
-                            </div>
-                        </a>
-                        <a href="#" class="blog__feature__item">
-                            <div class="blog__feature__item__pic">
-                                <img src="img/blog/sidebar/fp-3.jpg" alt="">
-                            </div>
-                            <div class="blog__feature__item__text">
-                                <h6>Amf Cannes Red Carpet Celebrities Kend...</h6>
+                                <h6>XXX</h6>
                                 <span>Seb 17, 2019</span>
                             </div>
                         </a>
                     </div>
-                    <div class="blog__sidebar__item">
-                        <div class="section-title">
-                            <h4>Tags cloud</h4>
-                        </div>
-                        <div class="blog__sidebar__tags">
-                            <a href="#">Fashion</a>
-                            <a href="#">Street style</a>
-                            <a href="#">Diversity</a>
-                            <a href="#">Beauty</a>
-                        </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </section>
 {% endblock %}
