--- a/project/templates/followers.html
+++ b/project/templates/followers.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static%} {% block breadcrumb %}
+{% extends 'base.html' %} {% load static %} {% load widget_tweaks %} {% block breadcrumb %}
 <li class="breadcrumb-item active">Followers of
     <a href="{% url 'account' profile.user.id %}">{{profile.user.username}} </a> </li>
 {% endblock %} {% block content %}
@@ -19,9 +19,11 @@
                         <tbody>{% for follower in followers %}
                             <tr>
                                 <td>
+                                    <div class="d-flex flex-column "> {% if profile.profile_picture %}
+                                        <img src="{{ profile.profile_picture.url }}" alt="Admin" class="rounded-circle" width="150"> {% endif %}
+                                    </div>
                                 </td>
                                 <td>
-                                    <img src="img/shop-cart/cp-1.jpg" alt="">
                                     <div class="cart__product__item__title">
                                         <h6><a href="{% url 'account' follower.follower.user.id %}">{{ follower.follower.user.username }}</a></h6>
                                     </div>
