--- a/project/templates/profiles.html
+++ b/project/templates/profiles.html
@@ -1,4 +1,7 @@
-{% extends 'base.html' %} {% block breadcrumb %} {% endblock %} {% block content %}
+{% extends 'base.html' %} {% load static %} {% load widget_tweaks %} {% block breadcrumb %}
+<li class="breadcrumb-item active">Profiles </a>
+</li>
+{% endblock %} {% block content %}
 <section class="shop-cart spad">
     <div class="container">
         <div class="row">
@@ -7,6 +10,7 @@
                     <table>
                         <thead>
                             <tr>
+                                <th>Photo</th>
                                 <th>Username</th>
                                 <th>Name</th>
                                 <th>Followers</th>
@@ -15,13 +19,17 @@
                         <tbody>{% for profile in profiles %}
                             <tr>
                                 <td>
-                                    <img src="img/shop-cart/cp-1.jpg" alt="">
-                                    <div class="cart__product__item__title">
-                                        <h6><a href="{% url 'account' follower.follower.user.id %}">{{ follower.follower.user.username }}</a></h6>
+                                    <div class="d-flex flex-column "> {% if profile.profile_picture %}
+                                        <img src="{{ profile.get_image }}" alt="Admin" class="rounded-circle" width="150"> {% endif %}
                                     </div>
                                 </td>
-                                <td>{{ follower.follower.name }} {{ follower.follower.surname }}</td>
-                                <td>{{ follower.follower.get_num_of_followers }} </td>
+                                <td>
+                                    <div class="cart__product__item__title">
+                                        <h6><a href="{% url 'account' profile.user.id %}">{{ profile.user.username }}</a></h6>
+                                    </div>
+                                </td>
+                                <td>{{ profile.name }} {{ profile.surname }}</td>
+                                <td>{{ profile.get_num_of_followers }} </td>
                             </tr>{% endfor %}
                         </tbody>
                     </table>
