--- a/project/templates/registry.html
+++ b/project/templates/registry.html
@@ -1,11 +1,11 @@
-{% extends 'base_accounts.html' %} {% block title %}Register to Meet{% endblock %} {% block content %}
+{% extends 'base_accounts.html' %} {% load static %} {% load bootstrap4 %} {% block title %}Register to Meet{% endblock %} {% block content %}
 <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10 col-sm-12">
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title">Register</h3>
                 <form method="post" novalidate enctype='multipart/form-data'>
-                    {% csrf_token %} {% include 'includes/form.html' %}
+                    {% csrf_token %} {% include 'includes/form.html' %} {% bootstrap_css %} {% bootstrap_javascript jquery='full' %} {{ form.media }}
                     <button type="submit" class="btn btn-primary btn-block">Save</button>
                 </form>
             </div>
