--- a/project/templates/edit_profile.html
+++ b/project/templates/edit_profile.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %} {% block title %}Edit event{% endblock %} {% block breadcrumb %}
+{% extends 'base.html' %} {% load static %} {% load bootstrap4 %} {% block title %}Edit event{% endblock %} {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
 <li class="breadcrumb-item active" aria-current="page"><a href="{% url 'account' profile.user.id %}">My Account</a></li>
 <li class="breadcrumb-item active">Edit Profile</li>
 {% endblock %} {% block content %} {% if profile.user == user %}
 <form method="post" class="mb-4" novalidate enctype='multipart/form-data'>
-    {% csrf_token %} {% include 'includes/form.html' %}
+    {% csrf_token %} {% include 'includes/form.html' %} {% bootstrap_css %} {% bootstrap_javascript jquery='full' %} {{ form.media }}
     <button type="submit" class="btn btn-success">Save changes</button>
     <a href="{% url 'account' profile.user.id %}" class="btn btn-outline-secondary" role="button">Cancel</a>
 </form> {% endif %} {% endblock %}
